--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="tour">
 
 <div class="box">
-  <img src="image/SUP1.PNG">
+  <img src="image/SUP1.png">
  <h3>RODAS SUPER</h3>
 <p>
   RODAS SUPER is washable plastic emulsion paint, suitable for both interior and exterior wall.
